@@ -15,4 +15,3 @@ enabled=AKTIVIERT
 disabled=DEAKTIVIERT
 log.level=Protokollierungsniveau nun %S
 log.paths=Downloadquellen und lokale Speicherorte anzeigen - %S
-log.clean=Protokoll säubern - %S
