@@ -15,4 +15,3 @@ enabled=ΕΝΕΡΓΟΠΟΙΗΜΕΝΟ
 disabled=ΑΠΕΝΕΡΓΟΠΟΙΗΜΕΝΟ
 log.level=Επίπεδο λεπτομερειών καταγραφής τώρα %S
 log.paths=Συμπεριλαμβάνονται πηγή λήψης και προορισμός - %S
-log.clean=Εκκαθάριση προσωπικών δεδομένων καταγραφής εξόδου - %S
