@@ -20,5 +20,4 @@ disabled=DISABLED
 
 log.level=Logging verbosity now %S
 log.paths=Including download source and target - %S
-log.clean=Sanitizing log output - %S
 
