@@ -15,4 +15,3 @@ enabled=ACTIVÉE
 disabled=DÉSACTIVÉE
 log.level=Type de données, à présent : %S
 log.paths=Ajout de la source et de la cible de téléchargement - %S
-log.clean=Nettoyage des données de sortie - %S
