@@ -15,4 +15,3 @@ enabled=有効
 disabled=無効
 log.level=ログレベルは %S です
 log.paths=ダウンロード元と保存先の記録 - %S
-log.clean=ログの消去 - %S
