@@ -15,4 +15,3 @@ enabled=HABILITADO
 disabled=DESABILITADO
 log.level=Registrando agora %S
 log.paths=Incluindo fonte e destino do download - %S
-log.clean=Limpando saída do log - %S
