@@ -15,4 +15,3 @@ enabled=ОМОГУЋЕНО
 disabled=ОНЕМОГУЋЕНО
 log.level=Вођење евиденције о детаљности је сада %S
 log.paths=Обухвати извор преузимања и циљ - %S
-log.clean=Исправљање излазног записа о евиденцији - %S
