@@ -15,4 +15,3 @@ enabled=Aktiverat
 disabled=Inaktiverat
 log.level=Loggningsomfånget är nu %S
 log.paths=Inklusive hämtningens källa och mål - %S
-log.clean=Städar loggutdata - %S
