@@ -15,4 +15,3 @@ enabled=已启用
 disabled=已禁用
 log.level=现在记录详细 %S
 log.paths=正在包含下载源和目标 - %S
-log.clean=正在擦除日志输出 - %S
