@@ -1,84 +1,0 @@
-/* ***** BEGIN LICENSE BLOCK *****
- * Version: MPL 1.1/GPL 2.0/LGPL 2.1
- *
- * The contents of this file are subject to the Mozilla Public License Version
- * 1.1 (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
- * http://www.mozilla.org/MPL/
- *
- * Software distributed under the License is distributed on an "AS IS" basis,
- * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
- * for the specific language governing rights and limitations under the
- * License.
- *
- * The Original Code is mozilla.org code.
- *
- * The Initial Developer of the Original Code is Mozilla Foundation.
- * Portions created by the Initial Developer are Copyright (C) 2010
- * the Initial Developer. All Rights Reserved.
- *
- * Contributor(s):
- *   Gavin Sharp <gavin@gavinsharp.com> (original author)
- *   Matthew Turnbull <sparky@bluefang-logic.com>
- *                * Striped down /w Gecko 1.9.1 XPCOMUtils compatibility
- *
- * Alternatively, the contents of this file may be used under the terms of
- * either the GNU General Public License Version 2 or later (the "GPL"), or
- * the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
- * in which case the provisions of the GPL or the LGPL are applicable instead
- * of those above. If you wish to allow use of your version of this file only
- * under the terms of either the GPL or the LGPL, and not to allow others to
- * use your version of this file under the terms of the MPL, indicate your
- * decision by deleting the provisions above and replace them with the notice
- * and other provisions required by the GPL or the LGPL. If you do not delete
- * the provisions above, a recipient may use your version of this file under
- * the terms of any one of the MPL, the GPL or the LGPL.
- *
- * ***** END LICENSE BLOCK ***** */
-
-let EXPORTED_SYMBOLS = ["Services"];
-
-const Ci = Components.interfaces;
-const Cc = Components.classes;
-
-Components.utils.import("resource://gre/modules/XPCOMUtils.jsm");
-
-if(!XPCOMUtils.defineLazyGetter) {
-  XPCOMUtils.defineLazyGetter = function XPCU_defineLazyGetter(
-                                  aObject, aName, aLambda)
-  {
-    aObject.__defineGetter__(aName, function() {
-      delete aObject[aName];
-      return aObject[aName] = aLambda.apply(aObject);
-    });
-  };
-
-  XPCOMUtils.defineLazyServiceGetter = function XPCU_defineLazyServiceGetter(
-                                         aObject, aName, aContract, aInterfaceName)
-  {
-    this.defineLazyGetter(aObject, aName, function XPCU_serviceLambda() {
-      return Cc[aContract].getService(Ci[aInterfaceName]);
-    });
-  };
-}
-
-let Services = {};
-
-XPCOMUtils.defineLazyGetter(Services, "prefs", function () {
-  return Cc["@mozilla.org/preferences-service;1"]
-           .getService(Ci.nsIPrefService)
-           .QueryInterface(Ci.nsIPrefBranch2);
-});
-
-XPCOMUtils.defineLazyServiceGetter(Services, "obs",
-                                   "@mozilla.org/observer-service;1",
-                                   "nsIObserverService");
-
-XPCOMUtils.defineLazyServiceGetter(Services, "console",
-                                   "@mozilla.org/consoleservice;1",
-                                   "nsIConsoleService");
-
-XPCOMUtils.defineLazyServiceGetter(Services, "strings",
-                                   "@mozilla.org/intl/stringbundle;1",
-                                   "nsIStringBundleService");
-
